<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings">

        <Preference
            android:key="allday_reminder_time_key"
            android:title="@string/allday_reminder_time"
            android:icon="@drawable/ic_notifications"/>

        <Preference
            android:key="battery_optimization_key"
            android:title="@string/battery_optimization"
            android:icon="@drawable/ic_battery"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/information">

        <Preference
            android:key="about_key"
            android:title="@string/about"
            android:icon="@drawable/ic_person"/>

        <Preference
            android:key="imprint_key"
            android:title="@string/imprint"
            android:icon="@drawable/ic_imprint"/>

        <Preference
            android:key="open_source_licences_key"
            android:title="@string/open_source_licences"
            android:icon="@drawable/ic_licence"/>
    </PreferenceCategory>
</PreferenceScreen>